# SODA

./: .dockerignore  .gitignore  README.md  build_hybrid.sh  environment.yml  exp.sh  final_exp.sh  final_exp_sm.sh  final_exp_split_th_k.sh  generate_gt.sh  generate_queries.sh  generate_queries_config.json  search.sh
ACORN/: CMakeLists.txt  run_acorn.sh
ACORN/benchs/: bench_gpu_1bn.py  bench_gpu_sift1m.py  bench_index_pq.py  bench_polysemous_1bn.py  bench_polysemous_sift1m.py  bench_scalar_quantizer.py
ACORN/build_local/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
ACORN/demos/: CMakeLists.txt  analyze_acorn_rabitq_side.cpp  rabitq_side_index_acorn.cpp  rabitq_side_index_acorn.h  test_acorn.cpp  test_acorn_in_ung.cpp  utils.cpp
ACORN/faiss/: IndexACORN.cpp  IndexACORN.h
ACORN/tests/: CMakeLists.txt  test_binary_hashindex.py  test_build_blocks.py  test_clustering.py  test_contrib.py  test_extra_distances.py  test_index.py  test_index_accuracy.py  test_index_binary.py  test_index_composite.py  test_merge_index.py  test_meta_index.py  test_rowwise_minmax.py  test_standalone_codec.py
DataTools/: fxy_reapt_query.py
DataTools/debug_csvs/: build_performance_summary.csv
DataTools/idea-selector/: els_router_train.py  fast_smart_revised_route_train.py  fast_smart_route_double_level_train.py  fast_smart_route_train.py  idea1_RF.py  idea2_RF.py  naive_smart_route_train.py  smart_route_train.py
DataTools/other-pic/: ELS_filter_ratio.py  ELS_time.py  UNG+intelELS_analyse.py  compare_num_entries_avg.py  compare_num_entries_avg_summary.csv  eda_analysis.py  plot_cache_miss.py  search_els_ratio_bar.py  search_els_ratio_bar_summary.csv  table23_feature_pre_time.py  table_avg_ELS.py  table_avg_vector_search.py
DataTools/pic-parall/: config_overall_qps-th-K.json  config_overall_qps.json  config_overall_qps_ljk.json  config_overall_qps_ung.json  run_pipeline.py
DataTools/pic-parall-old/: config_overall_qps.json
DataTools/pic-perquery/: new_run_pipeline.py
DataTools/process-labels/: change_json_to_txt.py  check_single_label.py  fill_empty_labels.py  gene_A_label_vector.py  gene_B.json  gene_specific_label_vector.py  recoder_base_labels_by_freq.py
DataTools/process-vector/: check_blank_line.py  compare_smartroute_qps_ratio.py  convert_json_experiments.py  copy_results.py  merge_experimental_results.py  merge_vector_and_labels.py  process_recall.py  process_recall_batch.py  process_recall_lachang.py  process_time.py  replace_file_name.py  select_one_query.py  select_one_query_max_recall_change.py  select_vector_and_labels_new.py  smart_route_recall_ge_0.9_qps_ratio.csv  smooth_add_points_results.py  smooth_add_points_results_some_csv.py  smooth_time_results.py  smooth_time_results_some_csv.py  smooth_time_results_th_k.py  split_existing_queries.py
DataTools/repeat-query/: find_query_indices.py  fxy_reapt_query.py  parse_cache_hit.py  repeat_all_folders.py
DataTools/rsync_file/: build_knowhere.sh  fix_acorn_meta_sizes.sh  fix_rabitq_meta_sizes.sh  rsync_datasets.sh  rsync_index_parallel_6datasets_187.sh  rsync_query_select_random300_to_187.sh  rsync_selectmodels_8datasets.sh
FAVOR/: CMakeLists.txt  README.md
FAVOR/app/: CMakeLists.txt  build_index.cpp  generate_attribute.cpp  generate_groundtruth.cpp  generate_query_conditions.cpp  search.cpp
FAVOR/data/: words_query.fvecs
FAVOR/include/: check.h  dataset.h  favor.h  filter_condition.h  transform.h
FAVOR/include/hnswlib/: bruteforce.h  hnswalg.h  hnswlib.h  space_l2.h
FAVOR/src/: CMakeLists.txt  baseset.cpp  dataset.cpp  filter_condition.cpp  queryset.cpp
FAVOR/tmp/: test.py
NaviX/benchs/: bench_gpu_1bn.py  bench_gpu_sift1m.py  bench_index_pq.py  bench_polysemous_1bn.py  bench_polysemous_sift1m.py  bench_scalar_quantizer.py
NaviX/contrib/: clustering.py  torch_utils.py
NaviX/tests/: test_binary_hashindex.py  test_build_blocks.py  test_clustering.py  test_contrib.py  test_extra_distances.py  test_graph_based.py  test_index.py  test_index_accuracy.py  test_index_binary.py  test_index_composite.py  test_io.py  test_merge_index.py  test_meta_index.py  test_rowwise_minmax.py  test_standalone_codec.py
UNG/codes/: CMakeLists.txt
UNG/codes/apps/: CMakeLists.txt  analyze_data.cpp  analyze_rabitq_side.cpp  build_UNG_index.cpp  build_navix_index.cpp  print_milvus_meta.cpp  rebuild_milvus_8datasets.cpp  search_UNG_index.cpp
UNG/codes/include/: MethodSelector.h  ThreadPool.h  distance.h  label_nav_graph.h  rabitq_side_index.h  trie.h  uni_nav_graph.h  utils.h
UNG/codes/src/: CMakeLists.txt  MethodSelector.cpp  rabitq_side_index.cpp  storage.cpp  trie.cpp  uni_nav_graph.cpp  utils.cpp
UNG/codes/tools/: CMakeLists.txt  generate_mixed_queries.cpp
UNG/data/: average_query_details.py
experiment_json/: experiments-Genome-FastSmartRoute-test.json  experiments-Genome-milvus.json  experiments-Genome-naiveRoute-test.json  experiments-Reviews-FastSmartRoute-1000-2.json  experiments-Tiktok-200-random-300-mix-len.json
experiment_json/202512/: experiments-AllNews-1-2.json  experiments-AllNews-1.json  experiments-AllNews-2.json  experiments-Amazon-1-2.json  experiments-Amazon-1.json  experiments-Amazon-2.json  experiments-BookReviews-0.json  experiments-BookReviews-1.json  experiments-BookReviews-2.json  experiments-BookReviews-3.json  experiments-Genome-1-2.json  experiments-Genome-1.json  experiments-Genome-2.json  experiments-Laion-1.json  experiments-Laion-2.json  experiments-Music-1-2.json  experiments-Music-1.json  experiments-Music-2.json  experiments-Reviews-1-2.json  experiments-Reviews-1.json  experiments-Reviews-2.json  experiments-Tiktok-1-2.json  experiments-Tiktok-1.json  experiments-Tiktok-2.json  experiments-VariousImg-1-2.json  experiments-VariousImg-1.json  experiments-VariousImg-2.json  experiments-goodreads_young-0.json  experiments-hackernews-0.json  experiments-podcast-0.json
experiment_json/202603-SmartRoute/: experiments-Amazon-SmartRoute-1000-1.json  (+7 more)
knowhere/: .gitignore  Makefile
selector/: smart_route_train.py
(+174 files in other folders)
