
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

set(UNG_HIDE_STATIC_ARCHIVE_SYMBOLS "-Wl,--exclude-libs,ALL")

add_executable(build_UNG_index build_UNG_index.cpp)
target_link_options(build_UNG_index PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(build_UNG_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)
if(URING_LIB)
    target_link_libraries(build_UNG_index ${URING_LIB})
endif()

add_executable(search_UNG_index search_UNG_index.cpp)
target_link_options(search_UNG_index PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(search_UNG_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)
if(URING_LIB)
    target_link_libraries(search_UNG_index ${URING_LIB})
endif()

add_executable(filtered_scan filtered_scan.cpp)
target_link_options(filtered_scan PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(filtered_scan ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)
if(URING_LIB)
    target_link_libraries(filtered_scan ${URING_LIB})
endif()

add_executable(analyze_data analyze_data.cpp)
target_link_options(analyze_data PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(analyze_data ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)
if(URING_LIB)
    target_link_libraries(analyze_data ${URING_LIB})
endif()

add_executable(build_navix_index build_navix_index.cpp)
target_link_options(build_navix_index PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(build_navix_index ${PROJECT_NAME} Vamana Boost::program_options Boost::filesystem ${ROARING_LIB} onnxruntime faiss ${NAVIX_LIB} OpenMP::OpenMP_CXX)
if(URING_LIB)
    target_link_libraries(build_navix_index ${URING_LIB})
endif()

add_executable(print_milvus_meta print_milvus_meta.cpp)
target_link_options(print_milvus_meta PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(print_milvus_meta ${PROJECT_NAME} Boost::program_options Boost::filesystem)
if(URING_LIB)
    target_link_libraries(print_milvus_meta ${URING_LIB})
endif()

add_executable(rebuild_milvus_8datasets rebuild_milvus_8datasets.cpp)
target_link_options(rebuild_milvus_8datasets PRIVATE ${UNG_HIDE_STATIC_ARCHIVE_SYMBOLS})
target_link_libraries(rebuild_milvus_8datasets ${PROJECT_NAME} Boost::program_options Boost::filesystem)
if(URING_LIB)
    target_link_libraries(rebuild_milvus_8datasets ${URING_LIB})
endif()
