set(CMAKE_CXX_STANDARD 17)
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

set(CPP_SOURCES utils.cpp storage.cpp trie.cpp distance.cpp search_queue.cpp filtered_scan.cpp uni_nav_graph.cpp MethodSelector.cpp)
if(UNG_ENABLE_RABITQ)
    list(APPEND CPP_SOURCES rabitq_side_index.cpp)
endif()
# add_library(${PROJECT_NAME} ${CPP_SOURCES} ${ROARING_LIB})
add_library(${PROJECT_NAME} ${CPP_SOURCES})
if(UNG_ENABLE_RABITQ)
    target_compile_definitions(${PROJECT_NAME} PUBLIC UNG_ENABLE_RABITQ=1)
else()
    target_compile_definitions(${PROJECT_NAME} PUBLIC UNG_ENABLE_RABITQ=0)
endif()
target_link_libraries(${PROJECT_NAME} PRIVATE faiss ${ROARING_LIB})
target_link_libraries(${PROJECT_NAME} PUBLIC ${KNOWHERE_LIBRARY})
if(URING_LIB)
    target_link_libraries(${PROJECT_NAME} PUBLIC ${URING_LIB})
endif()
if(TARGET nlohmann_json::nlohmann_json)
    target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
endif()
