set(CMAKE_CXX_STANDARD 17)
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

set(CPP_SOURCES utils.cpp storage.cpp trie.cpp distance.cpp search_queue.cpp filtered_scan.cpp uni_nav_graph.cpp MethodSelector.cpp)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/glibc_compat.cpp")
    list(APPEND CPP_SOURCES glibc_compat.cpp)
else()
    message(STATUS "glibc_compat.cpp not found; building without glibc compatibility shim")
endif()
if(ENABLE_RABITQ)
    list(APPEND CPP_SOURCES rabitq_side_index.cpp)
endif()
# add_library(${PROJECT_NAME} ${CPP_SOURCES} ${ROARING_LIB})
add_library(${PROJECT_NAME} ${CPP_SOURCES})
target_link_libraries(${PROJECT_NAME} PRIVATE faiss ${ROARING_LIB})
target_link_libraries(${PROJECT_NAME} PUBLIC ${KNOWHERE_LIBRARY})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../FAVOR/include)
if(URING_LIB)
    target_link_libraries(${PROJECT_NAME} PUBLIC ${URING_LIB})
endif()
if(TARGET nlohmann_json::nlohmann_json)
    target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
endif()
